# iracing_overlay_cpp

./: .gitignore  CMakeLists.txt  QUICKSTART.md  QUICK_START.md  README.md  TECHNICAL_REVIEW.md  build.bat  config.ini
assets/: README.md
include/glad/: glad.h
include/irsdk/: irsdk_defines.h
iracing_overlay_cpp/src/: main.cpp
iracing_overlay_cpp/src/data/: irating_calc.cpp  irating_calc.h  relative_calc.h
iracing_overlay_cpp/src/ui/: relative_widget.cpp  relative_widget.h  telemetry_widget.h
src/: glad.c  main.cpp  stb_impl.cpp
src/data/: irating_calc.cpp  irating_calc.h  irsdk_manager.cpp  irsdk_manager.h  overlay_window.cpp  overlay_window.h  relative_calc.cpp  relative_calc.h  relative_widget.cpp  relative_widget.h  telemetry_widget.cpp  telemetry_widget.h
src/ui/: overlay_window.cpp  overlay_window.h  relative_calc.cpp  relative_calc.h  relative_widget.cpp  relative_widget.h  telemetry_widget.cpp  telemetry_widget.h
src/utils/: config.cpp  config.h  config.ini.example  yaml_parser.cpp  yaml_parser.h
